--- a/config/index.env
+++ b/config/index.env
@@ -1,11 +1,11 @@
-DATABASE=mongodb+srv://eflexmedia1:uUv850HteAJrNLHD@coinxcryptome.yerpo0m.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://eflexmedia1:yPX7moLT7PEJjkgM@coinxcryptome.sah726n.mongodb.net/?retryWrites=true&w=majority
 PORT=8000
 JWT="Availtrade"
 
+
 SERVICE=gmail
 USER=coinxcryptostocks@gmail.com
-EMAILPASS=wgqqkmbgpjdyulug
-
+EMAILPASS=obyiwvyddqdqwqlg
 
 
 
